--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -381,6 +381,7 @@ BEGIN
     CONTROL         "Notify On",IDC_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,145,45,12
     COMBOBOX        IDC_NOTIFYON,61,145,68,73,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Blink tray icon",IDC_BLINKTRAY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,153,145,60,12
+	PUSHBUTTON      "Port settings", IDC_EDITPORTS,223,144,60,14,WS_TABSTOP
     CONTROL         "Display notification window",IDC_NOTIFYWINDOW,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,225,145,102,12
     LTEXT           "Text:",IDC_STATIC,19,47,18,8
     LTEXT           "Background:",IDC_STATIC,19,58,41,8
@@ -426,6 +427,36 @@ BEGIN
     CONTROL         "Always hide tray icon",IDC_HIDETRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,135,84,10
     CONTROL         "Minimize to tray on close",IDC_HIDEONCLOSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,114,135,94,10
     CONTROL         "Keep PeerBlock on top",IDC_ONTOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,135,100,10
+END
+
+IDD_EDITPORTS DIALOGEX 0, 0, 344, 213
+STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+CAPTION "Edit Ports"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    GROUPBOX        "Default Ports (applies to all profiles)", IDC_DEFGROUP, 6, 2, 332, 74
+    AUTOCHECKBOX    "80, 443 (HTTP, HTTPS - web traffic)", IDC_HTTPPORT, 13, 15, 200, 10
+    AUTOCHECKBOX    "21 (FTP - FTP transfer)", IDC_FTPPORT, 13, 30, 200, 10
+    AUTOCHECKBOX    "25 (SMTP - outgoing mail)", IDC_SMTPPORT, 13, 45, 200, 10
+    AUTOCHECKBOX    "110 (POP3 - incoming mail)", IDC_POP3PORT, 13, 60, 200, 10
+    CONTROL         "",IDC_PORTS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,5,82,334,98
+    PUSHBUTTON      "&Add",IDC_ADD,178,194,50,14
+    PUSHBUTTON      "&Edit",IDC_EDIT,233,194,50,14,WS_DISABLED
+	PUSHBUTTON      "Remove",IDC_REMOVE,289,194,50,14,WS_DISABLED
+END
+
+IDD_PORTPROFILE DIALOGEX 0, 0, 250, 300
+STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTER | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU 
+CAPTION "Port Profile"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    LTEXT           "Name:",IDC_STATIC,5,5,50,8
+	EDITTEXT        IDC_PORTNAME,5,14,240,14,ES_AUTOHSCROLL
+    LTEXT           "Ports (one entry per line):",IDC_STATIC,5,32,100,8
+	EDITTEXT        IDC_PORTPORTS,5,45,240,230,ES_MULTILINE | ES_WANTRETURN
+	
+    PUSHBUTTON      "&OK",IDOK,140,280,50,14
+	PUSHBUTTON      "Cancel",IDCANCEL,195,280,50,14
 END
 
 
