--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -962,9 +962,15 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_UNCAUGHTWIN32TEXT   "An uncaught exception occured!\r\nPlease report this error, including all information that follows, to the PeerBlock team at http://forums.peerblock.com.  Thank you for helping us improve PeerBlock!\r\n\r\nBuild Number: %1%\r\nFile: %2%\r\nLine: %3%\r\nType: class win32_error\r\nFunction: %4%\r\nError Code: %5%\r\nMessage: %6%"
+    IDS_UNCAUGHTWIN32TEXT   "An uncaught exception occurred!\r\nPlease report this error, including all information that follows, to the PeerBlock team at http://forums.peerblock.com.  Thank you for helping us improve PeerBlock!\r\n\r\nBuild Number: %1%\r\nFile: %2%\r\nLine: %3%\r\nType: class win32_error\r\nFunction: %4%\r\nError Code: %5%\r\nMessage: %6%"
     IDS_DRIVERERRWIN32TEXT  "PeerBlock is unable to load the packet filtering driver.\r\nThis is likely the result of some strange bug.  Please report this error, including all information that follows, to the PeerBlock team at http://forums.peerblock.com.  Thank you for helping us improve PeerBlock!\r\n\r\nclass win32_error\r\n%1%\r\n%2%\r\n%3%"
     IDS_UNSIGNEDDRIVERTEXT  "PeerBlock is unable to load the packet filtering driver, due to Windows driver-signing checking.\r\n\r\nPlease report this error, including all information that follows, to the PeerBlock team at http://forums.peerblock.com.  Thank you for helping us improve PeerBlock!\r\n\r\nException details:\r\n%1%\r\n%2%\r\n%3%"
+END
+
+STRINGTABLE 
+BEGIN
+    IDS_PREVREL				"Updating PeerBlock"
+    IDS_PREVREL237TEXT		"PeerBlock has updated your list URLs to the new 'friendly' iblocklist naming convention, and changed bluetack.co.uk list URLs over to the faster and more reliable iblocklist.com ones.\r\n\r\nThis is a one-time change.  If you change those URLs back we'll leave them alone."
 END
 
 #endif    // English (U.S.) resources
