Applied some MS Security flags to Release and Release (Vista) builds.  Address Space Layout Randomization and Data Execution Prevention to 32- and 64-bit, /SafeSEH to 32-bit only (not compatible with x64, as per http://msdn.microsoft.com/en-us/library/9a89h429%28VS.80%29.aspx).  [night_stalker_z]

--- a/pb/pb.vcproj
+++ b/pb/pb.vcproj
@@ -251,6 +251,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/SafeSEH"
 				AdditionalDependencies="comctl32.lib ws2_32.lib winmm.lib dnsapi.lib iphlpapi.lib shlwapi.lib"
 				LinkIncremental="1"
 				GenerateManifest="false"
@@ -261,8 +262,8 @@
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
+				RandomizedBaseAddress="2"
+				DataExecutionPrevention="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -356,6 +357,8 @@
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="0"
+				RandomizedBaseAddress="2"
+				DataExecutionPrevention="2"
 				TargetMachine="17"
 			/>
 			<Tool
@@ -437,6 +440,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/SafeSEH"
 				AdditionalDependencies="comctl32.lib ws2_32.lib winmm.lib dnsapi.lib iphlpapi.lib shlwapi.lib fwpuclnt.lib"
 				LinkIncremental="1"
 				GenerateManifest="true"
@@ -449,8 +453,8 @@
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
+				RandomizedBaseAddress="2"
+				DataExecutionPrevention="2"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -546,6 +550,8 @@
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="0"
+				RandomizedBaseAddress="2"
+				DataExecutionPrevention="2"
 				TargetMachine="17"
 			/>
 			<Tool
