Added icons for all windows.  (Fixes Issue #148)  [scrog69]

--- a/pb/pb.vcproj
+++ b/pb/pb.vcproj
@@ -1047,6 +1047,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\basedialog.h"
+				>
+			</File>
+			<File
 				RelativePath=".\char_convert.h"
 				>
 			</File>
