--- a/pb/pb.vcproj
+++ b/pb/pb.vcproj
@@ -46,6 +46,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\boost;..\zlib;..\sqlite3;&quot;..\sqlite3-plus&quot;;..\miniunzip;..\libp2p\include;..\libcurl\include;..\lib7z;..\tinyxml;..\pgfilter"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WIN32_WINNT=0x0500;WINVER=0x0500"
@@ -134,6 +135,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\boost;..\zlib;..\sqlite3;&quot;..\sqlite3-plus&quot;;..\miniunzip;..\libp2p\include;..\libcurl\include;..\lib7z;..\tinyxml;..\pgfilter"
 				PreprocessorDefinitions="_DEBUG;_WIN32_WINNT=0x0502;WINVER=0x0502;WIN64"
@@ -222,6 +224,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
@@ -317,6 +320,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
@@ -411,6 +415,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
@@ -509,6 +514,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="2"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
@@ -603,6 +609,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\boost;..\zlib;..\sqlite3;&quot;..\sqlite3-plus&quot;;..\miniunzip;..\libp2p\include;..\libcurl\include;..\lib7z;..\tinyxml;..\pgfilter"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WIN32_WINNT=0x0500;WINVER=0x0500"
@@ -691,6 +698,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\boost;..\zlib;..\sqlite3;&quot;..\sqlite3-plus&quot;;..\miniunzip;..\libp2p\include;..\libcurl\include;..\lib7z;..\tinyxml;..\pgfilter"
 				PreprocessorDefinitions="_DEBUG;_WIN32_WINNT=0x0600;WINVER=0x0600;WIN64"
