--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -970,20 +970,20 @@ END
 STRINGTABLE 
 BEGIN
 	IDS_LISTSAN_TITLE		"List URL Problem Detected"
-	IDS_LISTSAN_UNFRIENDLY	"PeerBlock uses 'friendly named' URLs to make it easier to identify lists in the List Manager, but the list URL you provided is an 'unfriendly' iblocklist URL.\r\n\r\nAllow PeerBlock to change this URL to a friendly-named one?"
+	IDS_LISTSAN_UNFRIENDLY	"PeerBlock uses ""friendly name"" URLs to make it easier to identify lists in the List Manager, but the list URL you provided is an ""unfriendly"" iblocklist URL.\r\n\r\nAllow PeerBlock to change this URL to a friendly-named one?"
 	IDS_LISTSAN_NOTIBL		"This URL is not hosted by iblocklist.com.  The PeerBlock team strongly recommends iblocklist.com URLs as they tend to be both faster and much more reliable than other potential URLs.\r\n\r\nAllow PeerBlock to update this lists's URL to an iblocklist.com hosted one?"
-	IDS_LISTSAN_WRONG		"This URL is not a valid list.  Did you use the 'List Description' link from iblocklist.com instead of the 'Update URL' link?\r\n\r\nAllow PeerBlock to update this list's URL to a correct one?"
-	IDS_LISTSAN_DEFAULT		"This URL refers to one of the Default Lists: %1%.\r\n\r\nPeerBlock is activating that list instead of adding this new one."
-	IDS_LISTSAN_DEFAULT_NIBL	"This URL refers to one of the Default Lists: %1%, and is a non-iblocklist.com hosted URL.\r\n\r\nAllow PeerBlock to activate that Default List using its standard URL instead of this new one?"
+	IDS_LISTSAN_WRONG		"This URL is not a valid list.  Did you use the ""List Description"" link from iblocklist.com instead of the ""Update URL"" link?\r\n\r\nPeerBlock will update this list's URL to a correct one."
+	IDS_LISTSAN_DEFAULT		"This URL refers to one of the Default Lists: ""%1%"".\r\n\r\nPeerBlock is activating that list instead of adding this new one."
+	IDS_LISTSAN_DEFAULT_NIBL	"This URL refers to one of the Default Lists: ""%1%"", and is a non-iblocklist.com hosted URL.\r\n\r\nAllow PeerBlock to activate that Default List using its standard URL instead of this new one?"
 	IDS_LISTSAN_EXACTDUPE	"This list URL has already been added to PeerBlock.  To prevent problems while updating lists, multiple instances of the same URL is disallowed.\r\n\r\nPeerBlock will ignore this new URL."
-	IDS_LISTSAN_DEFDUPE		"This list (""%1%"") has already been added, as one of the Default Lists.\r\n\r\nTo prevent problems while updating lists, multiple URLs for the same list is strongly not recommended.\r\n\r\nAllow PeerBlock to ignore this new URL?"
-	IDS_LISTSAN_DIFFDUPE	"This list (""%1%"") has already been added, under a different URL.  To prevent problems while updating lists, multiple URLs for the same list is currently disallowed.\r\n\r\nAllow PeerBlock to ignoring this new URL?"
+	IDS_LISTSAN_DEFDUPE		"The list ""%1%"" has already been added, as one of the Default Lists.\r\n\r\nTo prevent problems while updating lists, multiple URLs for the same list is strongly not recommended.\r\n\r\nAllow PeerBlock to ignore this new URL?"
+	IDS_LISTSAN_DIFFDUPE	"The list ""%1%"" has already been added, under a different URL.  To prevent problems while updating lists, multiple URLs for the same list is not recommended.\r\n\r\nAllow PeerBlock to ignore this new URL?"
 END
 
 STRINGTABLE 
 BEGIN
     IDS_PREVREL				"Updating PeerBlock"
-    IDS_PREVREL268TEXT		"PeerBlock now makes use of new 'friendly' names for iblocklist list URLs, and all displayed lists now use iblocklist.com URLs instead of bluetack.co.uk ones as iblocklist.com servers are generally faster and more reliable than bluetack's.  The PeerBlock team strongly recommends that you update your current list URLs to follow this convention.\r\n\r\nWould you like PeerBlock to optimize your lists and remove any duplicates?"
+    IDS_PREVREL268TEXT		"PeerBlock now makes use of new ""friendly"" names for iblocklist list URLs, and all displayed lists now use iblocklist.com URLs instead of bluetack.co.uk ones as iblocklist.com servers are generally faster and more reliable than bluetack's.  The PeerBlock team strongly recommends that you update your current list URLs to follow this convention.\r\n\r\nWould you like PeerBlock to optimize your lists and remove any duplicates?"
 END
 
 #endif    // English (U.S.) resources
