--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -451,12 +451,15 @@ CAPTION "Port Profile"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Name:",IDC_STATIC,5,5,50,8
-	EDITTEXT        IDC_PORTNAME,5,14,240,14,ES_AUTOHSCROLL
-    LTEXT           "Ports (one entry per line):",IDC_STATIC,5,32,100,8
-	EDITTEXT        IDC_PORTPORTS,5,45,240,230,ES_MULTILINE | ES_WANTRETURN
-	
+    EDITTEXT        IDC_PORTNAME,5,14,240,14,ES_AUTOHSCROLL
+    LTEXT           "Allow from:",IDC_STATIC,5,32,80,8
+    CONTROL         "Destination",IDC_DESTINATIONPORT,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,85,32,50,10
+    CONTROL         "Source",IDC_SOURCEPORT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,140,32,50,10
+    CONTROL         "Both",IDC_BOTHPORT,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,195,32,50,10
+    LTEXT           "Ports (one entry per line):",IDC_STATIC,5,46,100,8
+    EDITTEXT        IDC_PORTPORTS,5,58,240,212,ES_MULTILINE | ES_WANTRETURN
     PUSHBUTTON      "&OK",IDOK,140,280,50,14
-	PUSHBUTTON      "Cancel",IDCANCEL,195,280,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,195,280,50,14
 END
 
 
