Warn user when they try to exit PeerBlock, if recent non-HTTP blocking has occurred.  (Fixes Issue #95)

--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -964,6 +964,8 @@ BEGIN
     IDS_UNCAUGHTWIN32TEXT   "An uncaught exception occurred!\r\nPlease report this error, including all information that follows, to the PeerBlock team at http://forums.peerblock.com.  Thank you for helping us improve PeerBlock!\r\n\r\nBuild Number: %1%\r\nFile: %2%\r\nLine: %3%\r\nType: class win32_error\r\nFunction: %4%\r\nError Code: %5%\r\nMessage: %6%"
     IDS_DRIVERERRWIN32TEXT  "PeerBlock is unable to load the packet filtering driver.\r\nThis is likely the result of some strange bug.  Please report this error, including all information that follows, to the PeerBlock team at http://forums.peerblock.com.  Thank you for helping us improve PeerBlock!\r\n\r\nclass win32_error\r\n%1%\r\n%2%\r\n%3%"
     IDS_UNSIGNEDDRIVERTEXT  "PeerBlock is unable to load the packet filtering driver, due to Windows driver-signing checking.\r\n\r\nPlease report this error, including all information that follows, to the PeerBlock team at http://forums.peerblock.com.  Thank you for helping us improve PeerBlock!\r\n\r\nException details:\r\n%1%\r\n%2%\r\n%3%"
+	IDS_EXITWHILEBLOCKING	"Are you sure you want to exit PeerBlock?"
+	IDS_EXITWHILEBLOCKINGTEXT	"PeerBlock has blocked one or more connection attempts recently.  If PeerBlock was not running, these connections would have succeeded.\r\n\r\nExit PeerBlock anyway?"
 END
 
 // List sanity-checking messages
