Moved versioninfo_setup.bat, and made it called from within the Installer build-script.  Also minor code/readme cleanup.  [XhmikosR]

--- a/pb/pb.vcproj
+++ b/pb/pb.vcproj
@@ -482,7 +482,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="&quot;$(SolutionDir)pb\versioninfo_setup.bat&quot;"
+				CommandLine=""
 			/>
 		</Configuration>
 		<Configuration
