--- a/tinyxml/tinyxml.vcproj
+++ b/tinyxml/tinyxml.vcproj
@@ -305,6 +305,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\tinystr.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\tinyxml.cpp"
 				>
 			</File>
@@ -322,6 +326,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\tinystr.h"
+				>
+			</File>
 			<File
 				RelativePath=".\tinyxml.h"
 				>
