--- a/pbfilter/pbfilter.vcproj
+++ b/pbfilter/pbfilter.vcproj
@@ -77,7 +77,7 @@
 				AdditionalDependencies="ntoskrnl.lib hal.lib fwpkclnt.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\i386;$(PB_DDK_DIR)\lib\w2k\i386;$(NOINHERIT)"
+				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\i386;$(PB_DDK_DIR)\lib\wlh\i386;$(NOINHERIT)"
 				GenerateManifest="false"
 				EnableUAC="false"
 				IgnoreAllDefaultLibraries="true"
@@ -85,7 +85,6 @@
 				AssemblyDebug="1"
 				SubSystem="3"
 				Driver="1"
-				OptimizeForWindows98="0"
 				EntryPointSymbol="DriverEntry"
 				RandomizedBaseAddress="0"
 				DataExecutionPrevention="0"
@@ -168,10 +167,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ntoskrnl.lib $(NOINHERIT)"
+				AdditionalDependencies="ntoskrnl.lib hal.lib libcntpr.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)\$(ProjectName).sys"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\amd64;$(PB_DDK_DIR)\lib\wnet\amd64;$(NOINHERIT)"
+				AdditionalLibraryDirectories="$(PB_DDK_DIR)\lib\crt\amd64;$(PB_DDK_DIR)\lib\wlh\amd64;$(PB_DDK_DIR)\lib\wnet\amd64;$(NOINHERIT)"
 				GenerateManifest="false"
 				IgnoreAllDefaultLibraries="true"
 				GenerateDebugInformation="true"
@@ -606,8 +605,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug (Vista)|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -632,7 +631,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="$(PB_DDK_DIR)\inc\api;$(PB_DDK_DIR)\inc\crt;$(PB_DDK_DIR)\inc\ddk"
-				PreprocessorDefinitions="WIN32;_DEBUG;_X86_;_WIN2K_COMPAT_SLIST_USAGE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_X86_"
 				IgnoreStandardIncludePath="true"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -670,7 +669,6 @@
 				AssemblyDebug="1"
 				SubSystem="3"
 				Driver="1"
-				OptimizeForWindows98="0"
 				EntryPointSymbol="DriverEntry"
 				RandomizedBaseAddress="0"
 				DataExecutionPrevention="0"
@@ -832,6 +830,14 @@
 					/>
 				</FileConfiguration>
 				<FileConfiguration
+					Name="Debug (Vista)|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Debug (Vista)|x64"
 					ExcludedFromBuild="true"
 					>
@@ -861,14 +867,6 @@
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|x64"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug (Vista)|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
