--- a/zlib/zlib.vcproj
+++ b/zlib/zlib.vcproj
@@ -325,7 +325,19 @@
 				>
 			</File>
 			<File
-				RelativePath=".\gzio.c"
+				RelativePath=".\gzclose.c"
+				>
+			</File>
+			<File
+				RelativePath=".\gzlib.c"
+				>
+			</File>
+			<File
+				RelativePath=".\gzread.c"
+				>
+			</File>
+			<File
+				RelativePath=".\gzwrite.c"
 				>
 			</File>
 			<File
@@ -368,6 +380,10 @@
 			</File>
 			<File
 				RelativePath=".\deflate.h"
+				>
+			</File>
+			<File
+				RelativePath=".\gzguts.h"
 				>
 			</File>
 			<File
