--- a/pb/pb.vcproj
+++ b/pb/pb.vcproj
@@ -584,8 +584,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug (Vista)|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)"
+			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
 			ManagedExtensions="0"
@@ -612,7 +612,7 @@
 				AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\boost;..\zlib;..\sqlite3;&quot;..\sqlite3-plus&quot;;..\miniunzip;..\libp2p\include;..\libcurl\include;..\lib7z;..\tinyxml;..\pgfilter"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WIN32_WINNT=0x0500;WINVER=0x0500"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WIN32_WINNT=0x0600;WINVER=0x0600"
 				StringPooling="true"
 				MinimalRebuild="false"
 				ExceptionHandling="2"
@@ -636,7 +636,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="comctl32.lib ws2_32.lib winmm.lib dnsapi.lib iphlpapi.lib shlwapi.lib"
+				AdditionalDependencies="comctl32.lib ws2_32.lib winmm.lib dnsapi.lib iphlpapi.lib shlwapi.lib fwpuclnt.lib"
 				LinkIncremental="2"
 				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;X86&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				IgnoreAllDefaultLibraries="false"
