--- a/pb/pb.rc
+++ b/pb/pb.rc
@@ -381,7 +381,7 @@ BEGIN
     CONTROL         "Notify On",IDC_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,145,45,12
     COMBOBOX        IDC_NOTIFYON,61,145,68,73,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Blink tray icon",IDC_BLINKTRAY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,153,145,60,12
-	PUSHBUTTON      "Port settings", IDC_EDITPORTS,223,144,60,14,WS_TABSTOP
+//	PUSHBUTTON      "Port settings", IDC_EDITPORTS,223,144,60,14,WS_TABSTOP
     CONTROL         "Display notification window",IDC_NOTIFYWINDOW,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,225,145,102,12
     LTEXT           "Text:",IDC_STATIC,19,47,18,8
     LTEXT           "Background:",IDC_STATIC,19,58,41,8
